--- a/loadingScreen/classicalsandbox.html
+++ b/loadingScreen/classicalsandbox.html
@@ -6,7 +6,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Текст</title>
  </head>
-
+ <body> 
+  <p><b>КЛАССИЧЕСКИЙ SANDBOX</b>
+ </body>
 
 </body>
 </html>
