--- a/loadingScreen/classicalsandbox.html
+++ b/loadingScreen/classicalsandbox.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Текст</title>
  </head>
- <body> 
+ <body left: 50% top: 50%> 
   <p><b>КЛАССИЧЕСКИЙ SANDBOX</b>
  </body>
 
