--- a/loadingScreen/classicalsandbox.html
+++ b/loadingScreen/classicalsandbox.html
@@ -9,7 +9,15 @@
  <body left: 50% top: 50%> 
   <p><b>КЛАССИЧЕСКИЙ SANDBOX</b>
  </body>
-<center>Center this text!</center>
+<style>
+.center {
+ text-align: center
+}
+</style>
+  
+  <center>Center this text!</center>
+    <p style="text-align:center">Center this text!</p>
+  
   
   
 </html>
