--- a/loadingScreen/classicalsandbox.html
+++ b/loadingScreen/classicalsandbox.html
@@ -10,13 +10,13 @@
   <p><b>КЛАССИЧЕСКИЙ SANDBOX</b>
  </body>
 <style>
-.center {
- text-align: center
-}
+  .center {
+   text-align: center
+  }
 </style>
   
-  <center>Center this text!</center>
-    <p style="text-align:center">Center this text!</p>
+  <center>HELLO!</center>
+    <p style="text-align:center">ABC!</p>
   
   
   
