--- a/loadingScreen/classicalsandbox.html
+++ b/loadingScreen/classicalsandbox.html
@@ -15,9 +15,9 @@
   }
 </style>
   
+<body style="background-color:powderblue;">
+  
   <center>HELLO!</center>
-    <p style="text-align:center">ABC!</p>
-  
-  
-  
+  <p style="text-align:center">ABC!</p>
+ 
 </html>
