--- a/loadingScreen/classicalsandbox.html
+++ b/loadingScreen/classicalsandbox.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 
+ 
   
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Текст</title>
  </head>
- <body left: 50% top: 50%> 
+
+ <body style="background-color:DarkSlateGray;"> 
   <p><b>КЛАССИЧЕСКИЙ SANDBOX</b>
  </body>
 <style>
@@ -15,8 +17,7 @@
   }
 </style>
   
-<body style="background-color:powderblue;">
-  
+ 
   <center>HELLO!</center>
   <p style="text-align:center">ABC!</p>
  
