--- a/loadingScreen/classicalsandbox.html
+++ b/loadingScreen/classicalsandbox.html
@@ -14,7 +14,7 @@
 
   
  
-  <center>HELLO!</center>
-  <p style="text-align:center">ABC!</p>
+  <center>center</center>
+  <p style="text-align:center">center2</p>
  
 </html>
