--- a/loadingScreen/classicalsandbox.html
+++ b/loadingScreen/classicalsandbox.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 
- 123
   
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -15,6 +14,6 @@
   
  
   <center>center</center>
-  <p style="text-align:center">center2</p>
+  <p top=50% left=50%>center2</p>
  
 </html>
