--- a/loadingScreen/classicalsandbox.html
+++ b/loadingScreen/classicalsandbox.html
@@ -11,9 +11,7 @@
   <p><b>КЛАССИЧЕСКИЙ SANDBOX</b>
  </body>
 
-  
- 
   <center>center</center>
-  <p top=50% left=50%>center2</p>
+  <p top=50% left=50%><b>center2</b></p>
  
 </html>
