--- a/loadingScreen/classicalsandbox.html
+++ b/loadingScreen/classicalsandbox.html
@@ -14,4 +14,7 @@
   <center>center</center>
   <p top=50% left=50%><b>center2</b></p>
  
+<h1 style="background-color:powderblue;">blue</h1>
+<p style="background-color:tomato;">red.</p>
+  
 </html>
