--- a/loadingScreen/classicalsandbox.html
+++ b/loadingScreen/classicalsandbox.html
@@ -12,7 +12,7 @@
  </body>
 
   <center>center</center>
-  <p top=50% left=50%><b>center2</b></p>
+  <p top=50% left=50%><b>Hello World!</b></p>
  
 <h1 style="background-color:powderblue;">blue</h1>
 <p style="background-color:tomato;">red.</p>
