--- a/loadingScreen/classicalsandbox.html
+++ b/loadingScreen/classicalsandbox.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
-
-  
  <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Текст</title>
+  <meta charset="utf-8">
+  <title>Выравнивание по центру</title>
+  <style>
+   .text {
+    text-align:  center;
+   }
+  </style>
  </head>
-
- <body style="background-color:DarkSlateGray;"> 
-  <p><b>КЛАССИЧЕСКИЙ SANDBOX</b>
+ <body>
+  <div class="text">
+     <p>КЛАССИЧЕСКИЙ SANDBOX</p>
+  </div>
  </body>
-
-  <center>center</center>
-  <p top=50% left=50%><b>Hello World!</b></p>
- 
-<h1 style="background-color:powderblue;">blue</h1>
-<p style="background-color:tomato;">red.</p>
-  
 </html>
