--- a/loadingScreen/classicalsandbox.html
+++ b/loadingScreen/classicalsandbox.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <meta charset="utf-8">
-  <title>Выравнивание по центру</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>center</title>
   <style>
    .text {
     text-align:  center;
