--- a/loadingScreen/classicalsandbox.html
+++ b/loadingScreen/classicalsandbox.html
@@ -1,17 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-
-
-
-
-
-
-
-
-
-
-
   <body style="background-color:#708090;">
 
 <style>
@@ -35,3 +24,4 @@
     <p> Классический sandbox </p>
 </div>
 
+</html>
