--- a/loadingScreen/classicalsandbox.html
+++ b/loadingScreen/classicalsandbox.html
@@ -7,6 +7,8 @@
 <style>
     .example-1 {
         text-align: center;
+        margin-top: calc(5% + 15%);
+
 
         font-size: 35px;
         color: #ffffff;
