--- a/loadingScreen/classicalsandbox.html
+++ b/loadingScreen/classicalsandbox.html
@@ -4,6 +4,18 @@
 
   <body style="background-color:#708090;">
 
+   <style>
+    body {
+        background: #708090 url(https://cdn.discordapp.com/attachments/939921610398376037/992042521792364555/20220630145312_1.jpg);
+        color: #fff;
+        background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-size: 100% 100%;
+
+    }
+   </style>
+
 <style>
     .example-1 {
         text-align: center;
@@ -19,6 +31,6 @@
 </style>
 
 <div class="example-1">
-    <p>Классический sandbox</p>
+    <p> Классический sandbox </p>
 </div>
 
