--- a/loadingScreen/potatosandbox.html
+++ b/loadingScreen/potatosandbox.html
@@ -6,7 +6,7 @@
 
    <style>
     body {
-        background: #708090 url(https://media.discordapp.net/attachments/1260311490989396078/1260311590826278913/gm_construct0000.png?ex=668edc22&is=668d8aa2&hm=7147a36f0cc831ac85d1014ae99fa65f72de68c8e1816a3d734e5106995d8a45&=&format=webp&quality=lossless&width=1214&height=683);
+        background: #708090 url(https://lh3.googleusercontent.com/drive-viewer/AKGpihbqbwufWuPw-BD1ucNYE5F5FYSx9mo9b_rjhWORLMxm3kuIs14qOMHKQ5EMJcDw2B_qeI2Tc4zVo3qo-_QbSWxuXz6hM7xLZLU=w3840-h1957-rw-v1);
         color: #fff;
         background-attachment: fixed;
     background-repeat: no-repeat;
