--- a/loadingScreen/potatosandbox.html
+++ b/loadingScreen/potatosandbox.html
@@ -6,7 +6,7 @@
 
    <style>
     body {
-        background: #708090 url(https://lh3.googleusercontent.com/drive-viewer/AKGpihbqbwufWuPw-BD1ucNYE5F5FYSx9mo9b_rjhWORLMxm3kuIs14qOMHKQ5EMJcDw2B_qeI2Tc4zVo3qo-_QbSWxuXz6hM7xLZLU=w3840-h1957-rw-v1);
+        background: #708090 url(https://media.discordapp.net/attachments/1260311490989396078/1260311590826278913/gm_construct0000.png?ex=66a34b62&is=66a1f9e2&hm=ec630402b5bb423da691d11b600b5809fc532b81735f96252217bedbdaeea298&=&format=webp&quality=lossless&width=2428&height=1366);
         color: #fff;
         background-attachment: fixed;
     background-repeat: no-repeat;
