--- a/loadingScreen/potatosandbox.html
+++ b/loadingScreen/potatosandbox.html
@@ -1,34 +1,55 @@
 <!DOCTYPE html>
 <html>
 
-
   <body style="background-color:#708090;">
 
-   <style>
-    body {
-        background: #708090 url(https://media.discordapp.net/attachments/1260311490989396078/1260311590826278913/gm_construct0000.png?ex=66a34b62&is=66a1f9e2&hm=ec630402b5bb423da691d11b600b5809fc532b81735f96252217bedbdaeea298&=&format=webp&quality=lossless&width=2428&height=1366);
-        color: #fff;
-        background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: auto;
-    background-size: 100% 100%;
+    <style>
 
-    }
-   </style>
+        body {
+            background: #708090 url(https://i.imgur.com/KKwfz6f.png);
+            color: #fff;
+            background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: auto;
+        background-size: 100% 100%;
+        }
 
-<style>
-    .example-1 {
-        text-align: center;
+        .widget-container {
+            width: 25%;
+              position: absolute;
+              left: 5px;
+              top: 5px;
+        }
 
+        .tsarvar-widget {
+            width: 50%;
+            height: 50%;
+        }
 
-        font-size: 35px;
-        color: #ffffff;
+        body {
+            overflow: hidden;
+        }
 
-        font: 555% Segoe UI Black, sans-serif;
-        text-shadow: 0 1px 0 #CCCCCC, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15);
-    }
-</style>
+    </style>
 
-<div class="example-1">
-    <p>  </p>
-</div>
+    <div class="widget-container">
+        <a href="https://tsarvar.com/servers/garrys-mod/109.248.4.59:24227" 
+           data-tsarvarServerId="475414" 
+           class="tsarvar-widget">
+                Картошечка 🥔
+        </a>
+    </div>
+
+    <script type="text/javascript" charset="utf-8" src="https://widget.tsarvar.com/load.js" async></script>
+    <script type="text/javascript">
+        (function(k){(window[k]||(window[k]=[])).push({
+            element:'*[data-tsarvarServerId="475414"]',
+            serverId:475414,
+            serverIp:'109.248.4.59',
+            serverPort:24227,
+            blackMode:true,
+            players:false
+        });})('TsarvarWidgetQueue');
+    </script>
+
+</html>
