--- a/loadingScreen/potatosandbox.html
+++ b/loadingScreen/potatosandbox.html
@@ -48,7 +48,8 @@
             serverIp:'109.248.4.59',
             serverPort:24227,
             blackMode:true,
-            players:false
+            players:false,
+            lang:'ru'
         });})('TsarvarWidgetQueue');
     </script>
 
