--- a/loadingScreen/potatosandbox.html
+++ b/loadingScreen/potatosandbox.html
@@ -1,56 +1,73 @@
 <!DOCTYPE html>
-<html>
-
-  <body style="background-color:#708090;">
-
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
     <style>
-
         body {
-            background: #708090 url(https://i.imgur.com/KKwfz6f.png);
-            color: #fff;
-            background-attachment: fixed;
-        background-repeat: no-repeat;
-        background-size: auto;
-        background-size: 100% 100%;
+            font-family: Arial, sans-serif;
+            background-color: #26373d;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
-
-        .widget-container {
-            width: 25%;
-              position: absolute;
-              left: 5px;
-              top: 5px;
-        }
-
-        .tsarvar-widget {
-            width: 50%;
-            height: 50%;
-        }
-
-        body {
+        .image-container {
+            position: relative;
+            width: 100%;
+            height: 100%;
             overflow: hidden;
         }
-
+        .image-container img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            transition: opacity 1s ease-in-out;
+        }
+        .image-container img.active {
+            opacity: 1;
+        }
     </style>
+</head>
+<body>
 
-    <div class="widget-container">
-        <a href="https://tsarvar.com/servers/garrys-mod/109.248.4.59:24227" 
-           data-tsarvarServerId="475414" 
-           class="tsarvar-widget">
-                Картошечка 🥔
-        </a>
-    </div>
+    <div class="image-container" id="imageContainer"></div>
 
-    <script type="text/javascript" charset="utf-8" src="https://widget.tsarvar.com/load.js" async></script>
-    <script type="text/javascript">
-        (function(k){(window[k]||(window[k]=[])).push({
-            element:'*[data-tsarvarServerId="475414"]',
-            serverId:475414,
-            serverIp:'109.248.4.59',
-            serverPort:24227,
-            blackMode:true,
-            players:false,
-            lang:'ru'
-        });})('TsarvarWidgetQueue');
+    <script>
+        async function loadImages() {
+            try {
+                const response = await fetch('https://dl.dropboxusercontent.com/scl/fi/9en9g311b96sdo3em18w6/loadingscreen.txt?rlkey=haxt2x4nsqbsppxjkkmd7bpn1&e=1&st=ck90kbaw&dl=0');
+                const images = await response.json();
+
+                const container = document.getElementById('imageContainer');
+
+                images.forEach((src, index) => {
+                    const img = document.createElement('img');
+                    img.src = src;
+                    img.alt = `Image ${index + 1}`;
+                    container.appendChild(img);
+                });
+
+                // Запускаем цикл смены изображений
+                let currentIndex = 0;
+                const imgElements = container.getElementsByTagName('img');
+                imgElements[currentIndex].classList.add('active');
+
+                setInterval(() => {
+                    imgElements[currentIndex].classList.remove('active');
+                    currentIndex = (currentIndex + 1) % imgElements.length;
+                    imgElements[currentIndex].classList.add('active');
+                }, 8000);
+            } catch (error) {
+                console.error('Ошибка при загрузке изображений:', error);
+            }
+        }
+
+        window.onload = loadImages;
     </script>
 
+</body>
 </html>
